# sharanga_stream

./: .gitignore  README.md  fireV1.pt  load_unload.pt  main.py  ppe.pt  pyproject.toml  truck.pt  truckN.pt  yolo_export.py
api/core/: manager.py
api/models/: responses.py
api/routes/: detection.py
src/common/: gui_monitor.py  producer.py  stream_capture.py  yolo_detector.py
src/common/utils/: alert.py  db.py  display_utils.py
src/config/: config.py
src/scripts/: fire_smoke.py  load_unload.py  ppe.py
